--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -1,5 +1,53 @@
 Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/metaborg-book
 
+@inproceedings{BrandSVV02,
+  title = {Disambiguation Filters for Scannerless Generalized {LR} Parsers},
+  author = {Mark G. J. van den Brand and Jeroen Scheerder and Jurgen J.  Vinju and Eelco Visser},
+  year = {2002},
+  doi = {http://link.springer.de/link/service/series/0558/bibs/2304/23040143.htm},
+  tags = {GLR parsing, syntax definition, SDF, lexical syntax, scannerless, disambiguation, GLR, context-aware, parsing, scannerless parsing, ASF+SDF, SGLR, grammar},
+  researchr = {http://researchr.org/publication/BrandSVV02},
+  cites = {0},
+  citedby = {4},
+  pages = {143-158},
+  booktitle = {Compiler Construction, 11th International Conference, CC 2002, Held as Part of the Joint European Conferences on Theory and Practice of Software, ETAPS 2002, Grenoble, France, April 8-12, 2002, Proceedings},
+  editor = {R. Nigel Horspool},
+  volume = {2304},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {3-540-43369-4},
+}
+
+@inproceedings{VisserOnward14,
+  title = {A Language Designer's Workbench: A One-Stop-Shop for Implementation and Verification of Language Designs},
+  author = {Eelco Visser and Guido Wachsmuth and Andrew P. Tolmach and Pierre Neron and Vlad A. Vergu and Augusto Passalaqua and Gabriël D. P. Konat},
+  year = {2014},
+  doi = {http://doi.acm.org/10.1145/2661136.2661149},
+  researchr = {http://researchr.org/publication/VisserOnward14},
+  cites = {0},
+  citedby = {0},
+  pages = {95-111},
+  booktitle = {Onward! 2014, Proceedings of the 2014 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming \& Software, part of SLASH '14, Portland, OR, USA, October 20-24, 2014},
+  editor = {Andrew P. Black and Shriram Krishnamurthi and Bernd Bruegge and Joseph N. Ruskiewicz},
+  publisher = {ACM},
+  isbn = {978-1-4503-3210-1},
+}
+
+@article{HemelKGV10,
+  title = {Code generation by model transformation: a case study in transformation modularity},
+  author = {Zef  Hemel and Lennart C. L. Kats and Danny M.  Groenewegen and Eelco Visser},
+  year = {2010},
+  doi = {http://dx.doi.org/10.1007/s10270-009-0136-1},
+  tags = {model-to-model transformation, case study, meta-model, source-to-source, C++, code generation, model transformation, Meta-Environment, transformation},
+  researchr = {http://researchr.org/publication/HemelKGV10},
+  cites = {0},
+  citedby = {0},
+  journal = {Software and Systems Modeling},
+  volume = {9},
+  number = {3},
+  pages = {375-402},
+}
+
 @inproceedings{KatsV10a,
   title = {The {Spoofax} language workbench},
   author = {Lennart C. L. Kats and Eelco Visser},
@@ -14,6 +62,117 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   editor = {William R. Cook and Siobhán Clarke and Martin C. Rinard},
   publisher = {ACM},
   isbn = {978-1-4503-0240-1},
+}
+
+@inproceedings{Visser07,
+  title = {{WebDSL}: {A} Case Study in Domain-Specific Language Engineering},
+  author = {Eelco Visser},
+  year = {2007},
+  doi = {http://dx.doi.org/10.1007/978-3-540-88643-3_7},
+  tags = {WebDSL, reusable components, DSL engineering, web application development, data-flow language, pattern language, case study, software components, SDF, meta-model, abstract syntax, modeling language, Stratego/XT, language engineering, software language engineering, language modeling, software component, web engineering, language design, reuse, model-driven development, data-flow, survey, software engineering, model-driven engineering, web applications, DSL, Meta-Environment, incremental, design, process modeling, systematic-approach, ASF+SDF, language, Stratego, domain-specific language},
+  researchr = {http://researchr.org/publication/Visser07},
+  cites = {0},
+  citedby = {9},
+  pages = {291-373},
+  booktitle = {Generative and Transformational Techniques in Software Engineering II, International Summer School, {GTTSE} 2007},
+  editor = {Ralf Lämmel and Joost Visser and João Saraiva},
+  volume = {5235},
+  series = {Lecture Notes in Computer Science},
+  address = {Braga, Portugal},
+  publisher = {Springer},
+  isbn = {978-3-540-88642-6},
+}
+
+@article{GroenewegenHV10,
+  title = {Separation of Concerns and Linguistic Integration in {WebDSL}},
+  author = {Danny M.  Groenewegen and Zef  Hemel and Eelco Visser},
+  year = {2010},
+  doi = {http://dx.doi.org/10.1109/MS.2010.92},
+  tags = {WebDSL, separation of concerns},
+  researchr = {http://researchr.org/publication/GroenewegenHV10},
+  cites = {0},
+  citedby = {0},
+  journal = {IEEE Software},
+  volume = {27},
+  number = {5},
+  pages = {31-37},
+}
+
+@inproceedings{NeronTVW15,
+  title = {A Theory of Name Resolution},
+  author = {Pierre Neron and Andrew P. Tolmach and Eelco Visser and Guido Wachsmuth},
+  year = {2015},
+  doi = {http://dx.doi.org/10.1007/978-3-662-46669-8_9},
+  researchr = {http://researchr.org/publication/NeronTVW15},
+  cites = {0},
+  citedby = {0},
+  pages = {205-231},
+  booktitle = {Programming Languages and Systems - 24th European Symposium on Programming, ESOP 2015, Held as Part of the European Joint Conferences on Theory and Practice of Software, ETAPS 2015, London, UK, April 11-18, 2015. Proceedings},
+  editor = {Jan Vitek},
+  volume = {9032},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-662-46668-1},
+}
+
+@article{HemelGKV11,
+  title = {Static consistency checking of web applications with {WebDSL}},
+  author = {Zef  Hemel and Danny M.  Groenewegen and Lennart C. L. Kats and Eelco Visser},
+  year = {2011},
+  doi = {http://dx.doi.org/10.1016/j.jsc.2010.08.006},
+  tags = {model-to-model transformation, WebDSL, rule-based, application framework, model checking, XML, XML Schema, transformation language, points-to analysis, domain analysis, analysis, language design, static analysis, model-driven development, source-to-source, rules, C++, compiler, model transformation, web applications, consistency, abstraction, design, systematic-approach, open-source, transformation, Ruby on Rails, Stratego, Ruby, query language, domain-specific language},
+  researchr = {http://researchr.org/publication/HemelGKV11},
+  cites = {0},
+  citedby = {0},
+  journal = {Journal of Symbolic Computation},
+  volume = {46},
+  number = {2},
+  pages = {150-182},
+}
+
+@inproceedings{KatsVV11a,
+  title = {Testing domain-specific languages},
+  author = {Lennart C. L. Kats and Rob Vermaas and Eelco Visser},
+  year = {2011},
+  doi = {http://doi.acm.org/10.1145/2048147.2048160},
+  researchr = {http://researchr.org/publication/KatsVV11a},
+  cites = {0},
+  citedby = {0},
+  pages = {25-26},
+  booktitle = {Companion to the 26th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2011, part of SPLASH 2011, Portland, OR, USA, October 22 - 27, 2011},
+  editor = {Cristina Videira Lopes and Kathleen Fisher},
+  publisher = {ACM},
+  isbn = {978-1-4503-0942-4},
+}
+
+@article{JongeKVS12,
+  title = {Natural and Flexible Error Recovery for Generated Modular Language Environments},
+  author = {Maartje  de Jonge and Lennart C. L. Kats and Eelco Visser and Emma Söderberg},
+  year = {2012},
+  doi = {http://doi.acm.org/10.1145/2400676.2400678},
+  researchr = {http://researchr.org/publication/JongeKVS12},
+  cites = {0},
+  citedby = {0},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  volume = {34},
+  number = {4},
+  pages = {15},
+}
+
+@inproceedings{BravenboerTV06,
+  title = {Declarative, formal, and extensible syntax definition for {AspectJ}},
+  author = {Martin  Bravenboer and Éric Tanter and Eelco Visser},
+  year = {2006},
+  doi = {http://doi.acm.org/10.1145/1167473.1167491},
+  tags = {programming languages, AspectJ, object-oriented programming, Java, syntax definition, SDF, lexical syntax, design complexity, composition, design research, language design, aspect oriented programming, compiler, programming, subject-oriented programming, context-aware, language composition, parsing, design, scannerless parsing, extensible language, ASF+SDF, feature-oriented programming, SGLR, grammar},
+  researchr = {http://researchr.org/publication/BravenboerTV06},
+  cites = {0},
+  citedby = {1},
+  pages = {209-228},
+  booktitle = {Proceedings of the 21th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2006},
+  editor = {Peri L. Tarr and William R. Cook},
+  publisher = {ACM},
+  isbn = {1-59593-348-4},
 }
 
 @inproceedings{KV07.spoofax,
@@ -31,6 +190,51 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   publisher = {Elsevier},
 }
 
+@techreport{BV94,
+  title = {From Box to {\TeX}: An algebraic approach to the generation of documentation tools},
+  author = {Eelco Visser and Mark G. J. van den Brand},
+  year = {1994},
+  month = {July},
+  tags = {programming languages, model-to-model transformation, semantics, translation, meta programming, case study, SDF, meta-model, transformation language, process algebra, algebraic specification, code generation, model transformation,  algebra, programming, Meta-Environment, systematic-approach, ASF+SDF, meta-objects, transformation, program transformation},
+  researchr = {http://researchr.org/publication/BV94},
+  cites = {0},
+  citedby = {0},
+  institution = {Programming Research Group, University of Amsterdam},
+  number = {P9420},
+}
+
+@inproceedings{ErdwegSV13,
+  title = {The State of the Art in Language Workbenches - Conclusions from the Language Workbench Challenge},
+  author = {Sebastian Erdweg and Tijs van der Storm and Markus Völter and  Meinte Boersma and Remi Bosman and William R. Cook and Albert Gerritsen and Angelo Hulshout and Steven Kelly and Alex Loh and Gabriël D. P. Konat and Pedro J. Molina and Martin Palatnik and Risto Pohjonen and Eugen Schindler and Klemens Schindler and Riccardo Solmi and Vlad A. Vergu and Eelco Visser and Kevin van der Vlist and Guido Wachsmuth and Jimi van der Woning},
+  year = {2013},
+  doi = {http://dx.doi.org/10.1007/978-3-319-02654-1_11},
+  researchr = {http://researchr.org/publication/ErdwegSV13},
+  cites = {0},
+  citedby = {0},
+  pages = {197-217},
+  booktitle = {Software Language Engineering - 6th International Conference, SLE 2013, Indianapolis, IN, USA, October 26-28, 2013. Proceedings},
+  editor = {Martin Erwig and Richard F. Paige and Eric Van Wyk},
+  volume = {8225},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-319-02653-4},
+}
+
+@article{DolstraV02,
+  title = {Building Interpreters with Rewriting Strategies},
+  author = {Eelco  Dolstra and Eelco Visser},
+  year = {2002},
+  doi = {http://www.elsevier.com/gej-ng/31/29/23/117/52/show/Products/notes/index.htt#007},
+  tags = {laziness, programming languages, optimization, semantics, rule-based, pattern language, dynamic rewrite rules, interpreter, Stratego/XT, dynamic rules, parallel programming, reuse, graph-rewriting, rules, pattern matching, programming, program optimization, rewriting, systematic-approach, rewriting strategies, interpreters, Stratego},
+  researchr = {http://researchr.org/publication/DolstraV02},
+  cites = {0},
+  citedby = {0},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  volume = {65},
+  number = {3},
+  pages = {57-76},
+}
+
 @article{WachsmuthKV14,
   title = {Language Design with the Spoofax Language Workbench},
   author = {Guido Wachsmuth and Gabriël D. P. Konat and Eelco Visser},
@@ -43,6 +247,181 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   volume = {31},
   number = {5},
   pages = {35-43},
+}
+
+@inproceedings{KlintV94,
+  title = {Using Filters for the Disambiguation of Context-free Grammars},
+  author = {Paul  Klint and Eelco Visser},
+  year = {1994},
+  month = {October},
+  tags = {case study, disambiguation, context-aware, parsing, grammar, domain-specific language},
+  researchr = {http://researchr.org/publication/KlintV94},
+  cites = {0},
+  citedby = {0},
+  booktitle = {Proceedings of the ASMICS Workshop on Parsing Theory},
+  address = {Milano, Italy},
+  publisher = {Tech. Rep. 126--1994, Dipartimento di Scienze dell'Informazione, Universit\`a di Milano},
+}
+
+@phdthesis{Vis97.thesis,
+  title = {Syntax Definition for Language Prototyping},
+  author = {Eelco Visser},
+  year = {1997},
+  month = {September},
+  tags = {syntax definition, SDF, syntax definition formalism, disambiguation, testing, language design, graph-rewriting, algebraic specification,  algebra, context-aware, rewriting, parsing, design, scannerless parsing, ASF+SDF, SGLR},
+  researchr = {http://researchr.org/publication/Vis97.thesis},
+  cites = {0},
+  citedby = {6},
+  school = {University of Amsterdam},
+  advisor = {Paul  Klint},
+}
+
+@inproceedings{BravenboerV08,
+  title = {Parse Table Composition},
+  author = {Martin  Bravenboer and Eelco Visser},
+  year = {2009},
+  doi = {http://dx.doi.org/10.1007/978-3-642-00434-6_6},
+  tags = {parsing algorithm, programming languages, deployment, syntax definition, SDF, composition, source-to-source, parse table composition, compiler, programming, language composition, parsing, extensible language, ASF+SDF, open-source, grammar, domain-specific language},
+  researchr = {http://researchr.org/publication/BravenboerV08},
+  cites = {0},
+  citedby = {0},
+  pages = {74-94},
+  booktitle = {Software Language Engineering, First International Conference, SLE 2008, Toulouse, France, September 29-30, 2008. Revised Selected Papers},
+  editor = {Dragan Gasevic and Ralf Lämmel and Eric Van Wyk},
+  volume = {5452},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-642-00433-9},
+}
+
+@inproceedings{Visser-SCAM-2005,
+  title = {Transformations for Abstractions},
+  author = {Eelco Visser},
+  year = {2005},
+  month = {October},
+  doi = {http://dx.doi.org/10.1109/SCAM.2005.26},
+  tags = {programming languages, meta programming, case study, Stratego/XT, transformation language, extensible languages, programming, abstraction, Meta-Environment, extensible language, interpreters, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/Visser-SCAM-2005},
+  cites = {0},
+  citedby = {0},
+  booktitle = {5th IEEE International Workshop on Source Code Analysis and Manipulation (SCAM 2005), 30 September - 1 October 2005, Budapest, Hungary},
+  publisher = {IEEE Computer Society},
+  isbn = {0-7695-2292-0},
+}
+
+@article{BravenboerKVV08,
+  title = {{Stratego/XT 0.17}. {A} language and toolset for program transformation},
+  author = {Martin  Bravenboer and Karl Trygve Kalleberg and Rob Vermaas and Eelco Visser},
+  year = {2008},
+  doi = {http://dx.doi.org/10.1016/j.scico.2007.11.003},
+  tags = {control systems, programming languages, object-oriented programming, concrete object syntax, reusable components, rule-based, completeness, meta programming, pattern language, graph transformation, Stratego/XT, transformation language, reuse, graph-rewriting, rules, transformation system, DSL, programming, subject-oriented programming, context-aware, abstraction, Meta-Environment, rewriting, rewriting strategies, feature-oriented programming, concrete syntax, meta-objects, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/BravenboerKVV08},
+  cites = {0},
+  citedby = {7},
+  journal = {Science of Computer Programming},
+  volume = {72},
+  number = {1-2},
+  pages = {52-70},
+}
+
+@inproceedings{KatsBV08,
+  title = {Mixing source and bytecode: a case for compilation by normalization},
+  author = {Lennart C. L. Kats and Martin  Bravenboer and Eelco Visser},
+  year = {2008},
+  doi = {http://doi.acm.org/10.1145/1449764.1449772},
+  tags = {compilation by normalization, rule-based, Java, synchronization, translation, meta-model, modeling language, Stratego/XT, language modeling, composition, constraints, source-to-source, C++, Dryad, security, compiler, Meta-Environment, extensible language, systematic-approach, open-source, Stratego, JavaFront, domain-specific language},
+  researchr = {http://researchr.org/publication/KatsBV08},
+  cites = {44},
+  citedby = {3},
+  pages = {91-108},
+  booktitle = {Proceedings of the 23rd Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2008, October 19-23, 2008, Nashville, TN, USA},
+  editor = {Gail E. Harris},
+  publisher = {ACM},
+  isbn = {978-1-60558-215-3},
+}
+
+@inproceedings{VisserBT98,
+  title = {Building Program Optimizers with Rewriting Strategies},
+  author = {Eelco Visser and Zine-El-Abidine Benaissa and Andrew P. Tolmach},
+  year = {1998},
+  doi = {http://doi.acm.org/10.1145/289423.289425},
+  tags = {programming languages, optimization, semantics, rule-based, meta programming, graph transformation, variable binding, Stratego/XT, transformation language, term rewriting, composition, graph-rewriting, rules, C++, program optimization, Meta-Environment, higher-order transformations, rewriting, rewriting strategies, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/VisserBT98},
+  cites = {0},
+  citedby = {5},
+  pages = {13-26},
+  booktitle = {Proceedings of the third ACM SIGPLAN international conference on Functional programming},
+  editor = {Matthias Felleisen and Paul Hudak and Christian Queinnec},
+  address = {Baltimore, Maryland, United States},
+  publisher = {ACM},
+}
+
+@inproceedings{VollebregtKV12,
+  title = {Declarative specification of template-based textual editors},
+  author = {Tobi Vollebregt and Lennart C. L. Kats and Eelco Visser},
+  year = {2012},
+  doi = {http://doi.acm.org/10.1145/2427048.2427056},
+  researchr = {http://researchr.org/publication/VollebregtKV12},
+  cites = {0},
+  citedby = {0},
+  pages = {8},
+  booktitle = {International Workshop on Language Descriptions, Tools, and Applications, LDTA '12, Tallinn, Estonia, March 31 - April 1, 2012},
+  editor = {Anthony Sloane and Suzana Andova},
+  publisher = {ACM},
+  isbn = {978-1-4503-1536-4},
+}
+
+@inproceedings{Visser02,
+  title = {Meta-programming with Concrete Object Syntax},
+  author = {Eelco Visser},
+  year = {2002},
+  doi = {http://link.springer.de/link/service/series/0558/bibs/2487/24870299.htm},
+  tags = {programming languages, model-to-model transformation, object-oriented programming, concrete object syntax, syntax definition, meta programming, case study, SDF, meta-model, abstract syntax, Stratego/XT, transformation language, source-to-source, model transformation, programming, subject-oriented programming, Meta-Environment, parsing, scannerless parsing, systematic-approach, ASF+SDF, feature-oriented programming, concrete syntax, meta-objects, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/Visser02},
+  cites = {23},
+  citedby = {6},
+  pages = {299-315},
+  booktitle = {Generative Programming and Component Engineering, ACM SIGPLAN/SIGSOFT Conference, GPCE 2002, Pittsburgh, PA, USA, October 6-8, 2002, Proceedings},
+  editor = {Don S. Batory and Charles Consel and Walid Taha},
+  volume = {2487},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {3-540-44284-7},
+}
+
+@inproceedings{KatsVW10,
+  title = {Pure and declarative syntax definition: paradise lost and regained},
+  author = {Lennart C. L. Kats and Eelco Visser and Guido Wachsmuth},
+  year = {2010},
+  doi = {http://doi.acm.org/10.1145/1869459.1869535},
+  tags = {parsing algorithm, syntax definition, composition, software evolution, C++, compiler, parsing},
+  researchr = {http://researchr.org/publication/KatsVW10},
+  cites = {0},
+  citedby = {1},
+  pages = {918-932},
+  booktitle = {Proceedings of the 25th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2010},
+  editor = {William R. Cook and Siobhán Clarke and Martin C. Rinard},
+  address = {Reno/Tahoe, Nevada},
+  publisher = {ACM},
+  isbn = {978-1-4503-0203-6},
+}
+
+@inproceedings{Visser03,
+  title = {Program Transformation with {Stratego/XT}: Rules, Strategies, Tools, and Systems in {Stratego/XT 0.9}},
+  author = {Eelco Visser},
+  year = {2003},
+  doi = {http://springerlink.metapress.com/openurl.asp?genre=article&amp;issn=0302-9743&amp;volume=3016&amp;spage=216},
+  tags = {control systems, programming languages, rule-based, graph transformation, Stratego/XT, transformation language, composition, graph-rewriting, rules, programming paradigms, transformation system, abstraction, rewriting, parsing, rewriting strategies, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/Visser03},
+  cites = {0},
+  citedby = {4},
+  pages = {216-238},
+  booktitle = {Domain-Specific Program Generation, International Seminar, Dagstuhl Castle, Germany, March 23-28, 2003, Revised Papers},
+  editor = {Christian Lengauer and Don S. Batory and Charles Consel and Martin Odersky},
+  volume = {3016},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {3-540-22119-0},
 }
 
 @inproceedings{KonatVKWV2012,
@@ -72,4 +451,82 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   address = {Reno/Tahoe, Nevada},
   publisher = {ACM},
   isbn = {978-1-4503-0203-6},
+}
+
+@inproceedings{WachsmuthKVGV13,
+  title = {A Language Independent Task Engine for Incremental Name and Type Analysis},
+  author = {Guido Wachsmuth and Gabriël D. P. Konat and Vlad A. Vergu and Danny M.  Groenewegen and Eelco Visser},
+  year = {2013},
+  doi = {http://dx.doi.org/10.1007/978-3-319-02654-1_15},
+  researchr = {http://researchr.org/publication/WachsmuthKVGV13},
+  cites = {0},
+  citedby = {0},
+  pages = {260-280},
+  booktitle = {Software Language Engineering - 6th International Conference, SLE 2013, Indianapolis, IN, USA, October 26-28, 2013. Proceedings},
+  editor = {Martin Erwig and Richard F. Paige and Eric Van Wyk},
+  volume = {8225},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-319-02653-4},
+}
+
+@inproceedings{BravenboerV07,
+  title = {Designing Syntax Embeddings and Assimilations for Language Libraries},
+  author = {Martin  Bravenboer and Eelco Visser},
+  year = {2007},
+  doi = {http://dx.doi.org/10.1007/978-3-540-69073-3_5},
+  tags = {syntax embedding, syntax definition, assimilation, transformation language, architecture, language design, DSL, language libraries, design, transformation, domain-specific language},
+  researchr = {http://researchr.org/publication/BravenboerV07},
+  cites = {24},
+  citedby = {1},
+  pages = {34-46},
+  booktitle = {Models in Software Engineering, Workshops and Symposia at MoDELS 2007, Nashville, TN, USA, September 30 - October 5, 2007, Reports and Revised Selected Papers},
+  editor = {Holger Giese},
+  volume = {5002},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-540-69069-6},
+}
+
+@article{BravenboerDV10,
+  title = {Preventing injection attacks with syntax embeddings},
+  author = {Martin  Bravenboer and Eelco  Dolstra and Eelco Visser},
+  year = {2010},
+  doi = {http://dx.doi.org/10.1016/j.scico.2009.05.004},
+  tags = {injection attack},
+  researchr = {http://researchr.org/publication/BravenboerDV10},
+  cites = {0},
+  citedby = {0},
+  journal = {Science of Computer Programming},
+  volume = {75},
+  number = {7},
+  pages = {473-495},
+}
+
+@inproceedings{HemelV11,
+  title = {Declaratively programming the mobile web with {Mobl}},
+  author = {Zef  Hemel and Eelco Visser},
+  year = {2011},
+  doi = {http://doi.acm.org/10.1145/2048066.2048121},
+  researchr = {http://researchr.org/publication/HemelV11},
+  cites = {0},
+  citedby = {0},
+  pages = {695-712},
+  booktitle = {Proceedings of the 26th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2011, part of SPLASH 2011, Portland, OR, USA, October 22 - 27, 2011},
+  editor = {Cristina Videira Lopes and Kathleen Fisher},
+  publisher = {ACM},
+  isbn = {978-1-4503-0940-0},
+}
+
+@article{Visser15,
+  title = {Understanding software through linguistic abstraction},
+  author = {Eelco Visser},
+  year = {2015},
+  doi = {http://dx.doi.org/10.1016/j.scico.2013.12.001},
+  researchr = {http://researchr.org/publication/Visser15},
+  cites = {0},
+  citedby = {0},
+  journal = {Science of Computer Programming},
+  volume = {97},
+  pages = {11-16},
 }
