--- a/decl-your-lang/language-definition/language-definition.tex
+++ b/decl-your-lang/language-definition/language-definition.tex
@@ -50,6 +50,10 @@ internal, external, embedded languages
 
 leaky abstractions
 
+mobl \cite{HemelV11}
+
+WebDSL \cite{HemelGKV11}
+
 \section{Language Workbenches}
 
 what is a language workbench
@@ -68,6 +72,8 @@ integrated tool for
 while the functionality of a language workbench sounds pretty standard, there is
 a range of different approaches 
 
+an overview of the state-of-the-art in language workbenches \cite{ErdwegSV13}
+
 different language implementation philosophies
 
 long tradition of tools to assist language developers
@@ -79,7 +85,7 @@ long tradition of tools to assist language developers
 \item[JastAdd]
 \item[Xtext]
 \item[MPS]
-\item[Spoofax]
+\item[Spoofax] \cite{KatsV10}
 \item[Rascal]
 \item[SugarJ] 
 \end{description}
@@ -98,4 +104,17 @@ transformations
 
 
 tension between declarative expression and programmability
+
+\section{Further Reading}
+
+\cite{Visser15}: Understanding software through linguistic abstraction
+
+\cite{WachsmuthKV14}: overview paper in IEEE Software
+
+\cite{VisserOnward14}: language designer's workbench; vision of future of
+Spoofax
+
+\cite{GroenewegenHV10}: separation of concerns and linguistic integration in
+WebDSL \cite{Visser07}
+
 
