references for further reading

--- a/decl-your-lang/syntax/syntax.tex
+++ b/decl-your-lang/syntax/syntax.tex
@@ -3,14 +3,21 @@
 
 Spoofax takes a \emph{syntax first} approach to language definition.
 
-The syntax 
 
 We will illustrate the material in this book with a series of Spoofax
 projects names \texttt{LangA}, \texttt{LangB}, \texttt{LangC}, etc. 
 
+
+\section{The Start Symbol}
+
+changing the start symbol in main.esv
+
+
+\section{}
+
+The syntax 
+
 In this project 
-
-
 
 \begin{verbatim}
 module 
@@ -22,3 +29,26 @@ context-free priorities
   Exp.Mul > Exp.Add
 \end{verbatim}
 
+templates \cite{VollebregtKV12}
+
+\section{Error Recovery}
+
+\cite{JongeKVS12}
+
+
+\section{Further Reading}
+
+\cite{Vis97.thesis}: definition of SDF2
+
+\cite{KatsVW10}: Pure and declarative syntax definition: paradise lost and
+regained
+
+
+\cite{JongeV11}: An Algorithm for Layout Preservation in Refactoring
+Transformations
+
+\cite{BravenboerV08}: Parse table composition
+
+\cite{BravenboerTV06}: syntax of AspectJ
+
+\cite{KlintV94,BrandSVV02}: disambiguation filters
