all chapters in separate files

--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -6,30 +6,19 @@
 	
 \input{frontmatter}
 
-\newpage
 \input{preface/preface}
-\input{language-definition/language-definition}
+%\input{language-definition/language-definition}
 \input{getting-spoofax/getting-spoofax}
 \input{tests/tests}
 \input{syntax/syntax}
-
-
-\chapter{Names}
-\chapterlabel{names}
-
-\chapter{Type Constraints}
-\chapterlabel{types}
-
-\chapter{Transformation}
-\chapterlabel{transformation}
-
-\chapter{Semantics}
-\chapterlabel{semantics}
+%\input{names/names}
+%\input{semantics/semantics}
+%\input{extension/extension}
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
 	
-\appendix
-\chapter{Cheat Sheets}
-cheat sheets for the meta-DSLs
+%\appendix
+%\chapter{Cheat Sheets}
+%cheat sheets for the meta-DSLs
 
