--- a/decl-your-lang/commands/main.tex
+++ b/decl-your-lang/commands/main.tex
@@ -6,7 +6,7 @@
 
 % \usepackage{amsmath}
 % \usepackage{amssymb}
-% \usepackage{graphicx}
+\usepackage{graphicx}
 \usepackage{comment}
 % \usepackage{wrapfig}
 %\usepackage{url}
