--- a/decl-your-lang/commands/main.tex
+++ b/decl-your-lang/commands/main.tex
@@ -55,8 +55,8 @@
 \newcommand{\BookGitRepo}{https://github.com/MetaBorgCube/declare-your-language}
 \newcommand{\BookWebSite}{http://metaborgcube.github.io/declare-your-language}
 
-\newcommand{\LanguagesRepo}{\BookGitRepo/tree/master/languages/}
-\newcommand{\LanguagesRepoRef}{\href{\BookGitRepo/tree/master/languages/}{languages}}
+\newcommand{\LanguagesRepo}{\href{\BookGitRepo/tree/master/languages/}{languages}}
+\newcommand{\LanguageRepoRef}[1]{\href{\BookGitRepo/tree/master/languages/#1}{#1}}
 
 \newcommand{\BookOnGithub}[1]{\href{\BookWebSite}{#1}}
 
