--- a/decl-your-lang/getting-spoofax/getting-spoofax.tex
+++ b/decl-your-lang/getting-spoofax/getting-spoofax.tex
@@ -267,4 +267,4 @@ interpreted directly to produce an \emph{interpreter} for the language. In
 
 The next chapters discuss the support that Spoofax provides for these
 language concerns. Each chapter uses one or more example projects to illustrate
-the presented concepts. Download the projects from \LanguagesRepoRef\ to follow along.
+the presented concepts. Download the projects from \LanguagesRepo\ to follow along.
