--- a/decl-your-lang/preface/preface.tex
+++ b/decl-your-lang/preface/preface.tex
@@ -13,6 +13,29 @@ implement a parser for my language?''.
 Thus, a language designer should not be distracted by language implementation
 details. 
 
+\paragraph{Resources}
+
+This book is a response to the demand for better documentation for Spoofax. This
+demand suggests a sparsity of material.
+However, there is rather a lot of material available online. The
+\href{http://metaborg.org}{metaborg.org} website provides information about
+installation and documentation about the individual meta-languages. 
+Furthermore, there is a large number of research papers about Spoofax and its
+meta-languages; see for example the online
+\href{http://researchr.org/bibliography/metaborg-book/publications}{bibliography}
+for this book.
+All that material can be rather overwhelming for new users. 
+It may not be quite clear where to start.
+Furthermore, since Spoofax and its predecessor Stratego/XT have been
+under development for more than 15 years, the (syntactic) details of
+papers may be out-of-date.
+Hence, the goal of this book is to provide a single coherent guide to the basic
+concepts for new users of the workbench.
+This book draws on the available material and provides references to papers and
+web pages for further reading.
+
+\paragraph{In Progress}
+
 This is a book in progress, just as Spoofax itself is very much in progress.
 (Although Spoofax is much further along than this book :-) Spoofax is the
 product of an ongoing research project that investigates the nature of software
@@ -33,6 +56,8 @@ containers such as NetBeans and IntelliJ (modulo engineering work) as well as
 support robust command-line implementations of languages defined in Spoofax. So
 there is a risk that some of the text of this book and example project that
 comes with it, will have to be rewritten some.
+
+\paragraph{GitHub}
 
 This book and the accompanying Spoofax projects are on \BookOnGithub{github}. 
 I will consider pull requests with minor or major contributions to the book
