reference to OOPSLA 2011 paper on SPT

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -324,6 +324,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   pages = {52-70},
 }
 
+@inproceedings{KatsVV11,
+  title = {Integrated language definition testing: enabling test-driven language development},
+  author = {Lennart C. L. Kats and Rob Vermaas and Eelco Visser},
+  year = {2011},
+  doi = {http://doi.acm.org/10.1145/2048066.2048080},
+  researchr = {http://researchr.org/publication/KatsVV11},
+  cites = {0},
+  citedby = {0},
+  pages = {139-154},
+  booktitle = {Proceedings of the 26th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2011, part of SPLASH 2011, Portland, OR, USA, October 22 - 27, 2011},
+  editor = {Cristina Videira Lopes and Kathleen Fisher},
+  publisher = {ACM},
+  isbn = {978-1-4503-0940-0},
+}
+
 @inproceedings{KatsBV08,
   title = {Mixing source and bytecode: a case for compilation by normalization},
   author = {Lennart C. L. Kats and Martin  Bravenboer and Eelco Visser},
